# garmin-local-mcp

./: .gitignore  .mcpbignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  glama.json  manifest.json  pyproject.toml  server.json
.github/workflows/: ci.yml  publish.yml
src/garmin_mcp/: __init__.py  analysis.py  auth.py  cli.py  config.py  db.py  endpoints.py  fitdecode.py  importer.py  login.py  metrics.py  raw.py  server.py  sync.py
tests/: test_analysis.py  test_auth.py  test_config.py  test_db.py  test_endpoints.py  test_fitdecode.py  test_importer.py  test_raw.py  test_server.py  test_sync.py
tests/fixtures/: activities.json  hrv.json  sleep.json  training_status.json  usersummary.json
